--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,85 @@
-body{
-    background-color: sandybrown;
+/* Giving Body styling and making it flex for responsiveness. */
+body {
+    background-image: url('https://htmlcolorcodes.com/assets/images/html-color-codes-color-tutorials.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
-#container{
+/* Implementing Basic stylings to our container */
+
+#container {
     color: white;
 }
 
-.digit{
+.digit {
     font-size: 150px;
     font-weight: bold;
 }
-.text{
+
+.text {
     font-size: 30px;
     font-weight: bold;
 }
-#btn-container{
+
+#btn-container {
     text-align: center;
     margin-top: 40px;
 }
 
-.btn{
+/* Grabbing Buttons id to implement styling to it */
+
+.btn {
     padding: 8px 26px;
     font-size: 15px;
     margin: 0px 15px;
-    color: azure;
-    border: 0px;
+    background-color: #c2fbd7;
+    border-radius: 100px;
+    box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset, rgba(44, 187, 99, .15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(44, 187, 99, .15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(44, 187, 99, .15) 0 16px 32px;
+    color: green;
     cursor: pointer;
+    display: inline-block;
+    font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+    padding: 7px 20px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 250ms;
+    border: 0;
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
 }
 
-#start{
-    background-color: greenyellow;
+/* On Hover transforming button state */
+
+.btn:hover {
+    box-shadow: rgba(44, 187, 99, .35) 0 -25px 18px -14px inset, rgba(44, 187, 99, .25) 0 1px 2px, rgba(44, 187, 99, .25) 0 2px 4px, rgba(44, 187, 99, .25) 0 4px 8px, rgba(44, 187, 99, .25) 0 8px 16px, rgba(44, 187, 99, .25) 0 16px 32px;
+    transform: scale(1.05) rotate(-1deg);
 }
-#stop{
-    background-color: blueviolet;
+
+/* Implementing basic styling to our buttons */
+
+#start {
+    background-color: lightgreen;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
 }
-#reset{
-    background-color: crimson;
+
+#stop {
+    background-color: #A569BD;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+
+}
+
+#reset {
+    background-color: #8EF7E2;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+
 }
